--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@
     --container-padding-x: 15px;
 
     --transition-duration: 0.2s;
+
+    --header-hight: 90px;
 }
 
 body {
@@ -78,6 +80,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    min-height: var(--header-hight);
     padding-inline: 32px;
 }
 
@@ -98,7 +101,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .header-menu-link {
     display: inline-flex;
-    height: 90px;
+    height: var(--header-hight);
     column-gap: 7px;
     align-items: center;
     text-decoration: none;
@@ -148,7 +151,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 40px;
     background-color: transparent;
     border: var(--border);
-    border-radius: var(--border-radius);
+    border-radius: 50%;
 }
 
 .header-burger-menu-button:hover{
@@ -163,18 +166,93 @@ h1, h2, h3, h4, h5, h6 {
     box-shadow: 16px 0 0 currentColor;
 }
 
+.banner {
+    min-height: calc(100vh - var(--header-hight)) ;
+    padding: 36px 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    color: var(--color-light);
+}
+
+.banner-body {
+    text-transform: uppercase;
+}
+
+.banner-info {
+    display: flex;
+    align-items: end;
+    font-size: clamp(16px, 1.56vw, 30px);
+    line-height: 1.27;
+    font-weight: 700;
+}
+
+.banner-title {
+    font-size: min(18.75vw, 360px);
+    line-height: 1;
+}
+
+.banner-info::before {
+    content: '';
+    width: clamp(60px, 10.1vw, 194px);
+    aspect-ratio: 1;
+    background: url(/icons/bold-arrow-down-right.svg) center/contain no-repeat;
+    margin-right: 30px;
+}
+
+.banner-pagination-list {
+    display: flex;
+    justify-content: center;
+    column-gap: 14px;
+}
+
+.banner-pagination-item {
+    display: flex;
+}
+
+.banner-pagination-button {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: transparent;
+    border: none;
+}
+
+.banner-pagination-button::after {
+    content: '';
+    width: 10px;
+    height: 10px;
+    border: var(--border);
+    border-radius: 50%;
+    transition-duration: var(--transition-duration);
+}
+
+.banner-pagination-button.is-current::after {
+    background-color: var(--color-light);
+}
+
+.banner-pagination-button:not(.is-current):hover::after {
+    border-color: var(--color-light-gray);
+}
 
 @media (max-width: 1024px) {
     .header {
         flex-wrap: wrap;
         padding-top: 20px;
-        gap: 10px;
+        gap: 10px;   
+    }
+
+    .header,
+    .banner {
         padding-inline: 15px;
     }
+
     .header-menu {
         order: 1;
         flex-basis: 100%;
     }
+
     .header-menu-link {
         height: 50px;
     }
@@ -196,5 +274,7 @@ h1, h2, h3, h4, h5, h6 {
     .header-action {
         column-gap: 15px;
     }
-   
+    .banner-info::before {
+        margin-right: 10px;
+    }
 }
